--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18",
     "react-dom": "^18",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
